--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,11 @@ repos:
       - id: clang-format
         args: [--style=Google, -i]
       - id: clang-tidy
-        args: [--fix, -p=build/compile_commands.json]
+        args:
+         - --fix
+         - -p=build
+         - -extra-arg=-I/build/_deps/eigen-src/Eigen
+        exclude: ^include/kalman_filter/
       - id: cpplint
         args: [--filter=-legal/copyright]
       - id: cppcheck
