Made CMakeLists.txt compatible with using Eigen.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(kalman_filter example.cpp)
+target_link_libraries(kalman_filter PUBLIC Eigen3::Eigen)
+
 add_executable(kalman_filter_main main.cpp)
-target_link_libraries(kalman_filter_main kalman_filter)
+target_link_libraries(kalman_filter_main PRIVATE kalman_filter)
