--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(kalman_filter example.cpp kf.cpp)
+add_library(kalman_filter example.cpp kf1D.cpp)
 add_executable(kalman_filter_main main.cpp)
 target_link_libraries(kalman_filter_main kalman_filter)
