--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,19 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # # --- Fetch Eigen ---
-# include(FetchContent)
+ include(FetchContent)
 
-# FetchContent_Declare(
-#   Eigen
-#   GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
-#   GIT_TAG 3.4.0  
-# )
+ FetchContent_Declare(
+   Eigen
+   GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
+   GIT_TAG 3.4.0  
+ )
 
-# FetchContent_MakeAvailable(Eigen)
+ FetchContent_MakeAvailable(Eigen)
 
 # --- Include directories ---
 include_directories(include)
-include_directories("/opt/homebrew/opt/eigen/include/eigen3")
+#include_directories("/opt/homebrew/opt/eigen/include/eigen3")
 
 # --- Subdirectories ---
 add_subdirectory(src)
