--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(kalman_filter example.cpp kalman_step.cpp)
+add_library(kalman_filter example.cpp kalman_step.cpp kalman_filter.cpp)
 target_link_libraries(kalman_filter PUBLIC Eigen3::Eigen)
 
 add_executable(kalman_filter_main main.cpp)
